2004-04-12  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-std__adasockets.adb, aws-net-std__gnat.adb:
	(Set_Non_Blocking_Mode): New routine.
	(Set_Blocking_Mode): Removed.
	(Accept_Socket): Check for timeout. Make New_Socket non-blocking.
	(Bind): Make just created socket non-blocking.
	(Connect): Make connected socket non-blocking.

2004-04-06  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-net-std__gnat.adb:
	(Send): Properly handle the case where all data are not sent
	 in one chunk.
	Fix from Thomas Quinot.

2004-04-05  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-std__adasockets.adb:
	(Wait_Mode): Moved to aws-net.adb.
	(Wait_For): Moved to aws-net.adb.
	(Wait_Mode): Read/Write -> Input/Output.

2004-03-09  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-std__adasockets.adb:
	(Bind): Catch Sockets.Naming.Naming_Error too.
	(Connect): Idem.

2004-03-09  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-std__adasockets.adb:
	(Accept_Socket): Catch only Sockets.Socket_Error.
	(Bind): Catch only Sockets.Socket_Error.
	(Connect): Don't shutdown socket if socket creation was failed.
	 catch only Sockets.Connection_Refused and Sockets.Socket_Error.
	(Listen): Catch only Sockets.Socket_Error.

	* aws-net-std__gnat.adb:
	(Accept_Socket): Catch only Sockets.Socket_Error.
	(Bind): Catch only Sockets.Socket_Error and Sockets.Host_Error.
	(Connect): Don't shutdown socket if socket creation was failed.
	 catch only Sockets.Host_Error and Sockets.Socket_Error.
	(Get_Receive_Buffer_Size): Catch Sockets.Socket_Error.
	(Get_Send_Buffer_Size): Idem.
	(Listen): Idem.
	(Peer_Addr): Idem.
	(Receive): Idem.
	(Send): Idem.
	(Set_Blocking_Mode): Idem.

2004-03-01  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* aws-net-std__adasockets.adb, aws-net-std__gnat.adb:
	(Errno): New routine.

2004-01-14  Pascal Obry  <p.obry@wanadoo.fr>

	* aws-os_lib__gnat.adb:
	(For_Every_Directory_Entry): End_Slash renamed Get_Directory.

	* aws-os_lib__posix.adb: